# git_test

./: test
install/: local_setup.sh  setup.sh
install/auto_shoot/share/auto_shoot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auto_shoot/share/auto_shoot/cmake/: auto_shootConfig.cmake
install/tdt_interface/local/lib/python3.10/dist-packages/tdt_interface-0.0.1-py3.10.egg-info/: SOURCES.txt
install/tdt_interface/share/tdt_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tdt_interface/share/tdt_interface/cmake/: export_tdt_interface__rosidl_generator_cExport-noconfig.cmake  export_tdt_interface__rosidl_generator_cppExport.cmake  export_tdt_interface__rosidl_generator_pyExport.cmake  export_tdt_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_tdt_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_tdt_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_tdt_interface__rosidl_typesupport_fastrtps_cppExport.cmake  tdt_interface__rosidl_typesupport_cExport-noconfig.cmake  tdt_interface__rosidl_typesupport_cppExport-noconfig.cmake  tdt_interface__rosidl_typesupport_introspection_cExport.cmake  tdt_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  tdt_interface__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build
shoot/: main.cpp
src/auto_shoot/: CMakeLists.txt
src/auto_shoot/src/: autoShoot.cpp
src/tdt_interface/: CMakeLists.txt
